# EmbeddedCar

./: CMakeLists.txt  Chasis.c  Controller.c  Engine.c  EngineController.c  FreeRTOSConfig.h  Test.c
BLT/BLT_Client/: BLT_Client.ino
BLT/BLT_Server/: BLT_Server.ino
lib/uart/: uart_task.c  uart_task.h  uart_task_controller.c  uart_task_controller.h  uart_task_engine.h
